StreamLanguage/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ATTACH
    CALL
    EOF
    EVENT
    FILTEROP
    LBRACKET
    MAP
    NEWLINE
    RBRACKET
    REDUCE
    STREAM

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement -> declaration
Rule 3     statement -> expression SEMICOLON
Rule 4     statement -> return_statement SEMICOLON
Rule 5     statement -> control_flow
Rule 6     statement -> assignment SEMICOLON
Rule 7     statement_list -> statement
Rule 8     statement_list -> statement_list statement
Rule 9     function_call -> IDENTIFIER LPAREN opt_arg_list RPAREN
Rule 10    opt_arg_list -> arg_list
Rule 11    opt_arg_list -> empty
Rule 12    arg_list -> expression
Rule 13    arg_list -> arg_list COMMA expression
Rule 14    function_definition -> FN IDENTIFIER LPAREN opt_param_list RPAREN block_statement
Rule 15    function_definition -> FN IDENTIFIER LPAREN opt_param_list RPAREN typehint block_statement
Rule 16    return_statement -> RETURN expression
Rule 17    block_statement -> LBRACE statement_list RBRACE
Rule 18    lambda_function -> FN LPAREN opt_param_list RPAREN LAMBDA block_statement
Rule 19    lambda_function -> FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
Rule 20    lambda_function -> LPAREN opt_param_list RPAREN LAMBDA block_statement
Rule 21    lambda_function -> LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
Rule 22    lambda_function -> LPAREN opt_param_list RPAREN LAMBDA expression
Rule 23    opt_param_list -> param_list
Rule 24    opt_param_list -> empty
Rule 25    param_list -> param
Rule 26    param_list -> param_list COMMA param
Rule 27    param -> IDENTIFIER
Rule 28    param -> IDENTIFIER typehint
Rule 29    declaration -> VAR declaration_base SEMICOLON
Rule 30    declaration -> CONST declaration_base SEMICOLON
Rule 31    declaration -> function_definition
Rule 32    declaration_base -> IDENTIFIER
Rule 33    declaration_base -> IDENTIFIER ASSIGN expression
Rule 34    declaration_base -> IDENTIFIER typehint
Rule 35    declaration_base -> IDENTIFIER typehint ASSIGN expression
Rule 36    typehint -> TYPEHINTCOLON type
Rule 37    type -> SINT
Rule 38    type -> SFLOAT
Rule 39    type -> SSTRING
Rule 40    type -> SBOOL
Rule 41    type -> SSTREAM
Rule 42    type -> SEVENT
Rule 43    ptype -> INT
Rule 44    ptype -> FLOAT
Rule 45    ptype -> STRING
Rule 46    ptype -> TRUE
Rule 47    ptype -> FALSE
Rule 48    expression -> expression PLUS expression
Rule 49    expression -> expression MINUS expression
Rule 50    expression -> expression MULTIPLY expression
Rule 51    expression -> expression DIVIDE expression
Rule 52    expression -> expression EQUALS expression
Rule 53    expression -> expression MODULUS expression
Rule 54    expression -> expression NE expression
Rule 55    expression -> expression GT expression
Rule 56    expression -> expression LT expression
Rule 57    expression -> expression GE expression
Rule 58    expression -> expression LE expression
Rule 59    expression -> expression AND expression
Rule 60    expression -> expression OR expression
Rule 61    expression -> expression CHAIN expression
Rule 62    expression -> expression STREAMSPLIT expression
Rule 63    expression -> expression STREAMMERGE expression
Rule 64    expression -> expression FEEDBACK expression
Rule 65    expression -> MINUS expression
Rule 66    expression -> PLUS expression
Rule 67    expression -> NOT expression
Rule 68    control_flow -> conditional
Rule 69    control_flow -> loop
Rule 70    control_flow -> break
Rule 71    control_flow -> continue
Rule 72    expression -> LPAREN expression RPAREN
Rule 73    expression -> INT
Rule 74    expression -> FLOAT
Rule 75    expression -> STRING
Rule 76    expression -> TRUE
Rule 77    expression -> FALSE
Rule 78    expression -> IDENTIFIER
Rule 79    expression -> function_call
Rule 80    expression -> expression TO_STREAM
Rule 81    expression -> lambda_function
Rule 82    conditional -> IF LPAREN expression RPAREN block_statement ELSE block_statement
Rule 83    conditional -> IF LPAREN expression RPAREN block_statement
Rule 84    loop -> FOR LPAREN declaration SEMICOLON expression SEMICOLON expression RPAREN block_statement
Rule 85    loop -> WHILE LPAREN expression RPAREN block_statement
Rule 86    break -> BREAK SEMICOLON
Rule 87    continue -> CONTINUE SEMICOLON
Rule 88    assignment -> IDENTIFIER ASSIGN expression
Rule 89    empty -> <empty>

Terminals, with rules where they appear

AND                  : 59
ASSIGN               : 33 35 88
ATTACH               : 
BREAK                : 86
CALL                 : 
CHAIN                : 61
COMMA                : 13 26
CONST                : 30
CONTINUE             : 87
DIVIDE               : 51
ELSE                 : 82
EOF                  : 
EQUALS               : 52
EVENT                : 
FALSE                : 47 77
FEEDBACK             : 64
FILTEROP             : 
FLOAT                : 44 74
FN                   : 14 15 18 19
FOR                  : 84
GE                   : 57
GT                   : 55
IDENTIFIER           : 9 14 15 27 28 32 33 34 35 78 88
IF                   : 82 83
INT                  : 43 73
LAMBDA               : 18 19 20 21 22
LBRACE               : 17
LBRACKET             : 
LE                   : 58
LPAREN               : 9 14 15 18 19 20 21 22 72 82 83 84 85
LT                   : 56
MAP                  : 
MINUS                : 49 65
MODULUS              : 53
MULTIPLY             : 50
NE                   : 54
NEWLINE              : 
NOT                  : 67
OR                   : 60
PLUS                 : 48 66
RBRACE               : 17
RBRACKET             : 
REDUCE               : 
RETURN               : 16
RPAREN               : 9 14 15 18 19 20 21 22 72 82 83 84 85
SBOOL                : 40
SEMICOLON            : 3 4 6 29 30 84 84 86 87
SEVENT               : 42
SFLOAT               : 38
SINT                 : 37
SSTREAM              : 41
SSTRING              : 39
STREAM               : 
STREAMMERGE          : 63
STREAMSPLIT          : 62
STRING               : 45 75
TO_STREAM            : 80
TRUE                 : 46 76
TYPEHINTCOLON        : 36
VAR                  : 29
WHILE                : 85
error                : 

Nonterminals, with rules where they appear

arg_list             : 10 13
assignment           : 6
block_statement      : 14 15 18 19 20 21 82 82 83 84 85
break                : 70
conditional          : 68
continue             : 71
control_flow         : 5
declaration          : 2 84
declaration_base     : 29 30
empty                : 11 24
expression           : 3 12 13 16 22 33 35 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 66 67 72 80 82 83 84 84 85 88
function_call        : 79
function_definition  : 31
lambda_function      : 81
loop                 : 69
opt_arg_list         : 9
opt_param_list       : 14 15 18 19 20 21 22
param                : 25 26
param_list           : 23 26
program              : 0
ptype                : 
return_statement     : 4
statement            : 7 8
statement_list       : 1 8 17
type                 : 36
typehint             : 15 19 21 28 34 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (7) statement_list -> . statement
    (8) statement_list -> . statement_list statement
    (2) statement -> . declaration
    (3) statement -> . expression SEMICOLON
    (4) statement -> . return_statement SEMICOLON
    (5) statement -> . control_flow
    (6) statement -> . assignment SEMICOLON
    (29) declaration -> . VAR declaration_base SEMICOLON
    (30) declaration -> . CONST declaration_base SEMICOLON
    (31) declaration -> . function_definition
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression NE expression
    (55) expression -> . expression GT expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GE expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . expression CHAIN expression
    (62) expression -> . expression STREAMSPLIT expression
    (63) expression -> . expression STREAMMERGE expression
    (64) expression -> . expression FEEDBACK expression
    (65) expression -> . MINUS expression
    (66) expression -> . PLUS expression
    (67) expression -> . NOT expression
    (72) expression -> . LPAREN expression RPAREN
    (73) expression -> . INT
    (74) expression -> . FLOAT
    (75) expression -> . STRING
    (76) expression -> . TRUE
    (77) expression -> . FALSE
    (78) expression -> . IDENTIFIER
    (79) expression -> . function_call
    (80) expression -> . expression TO_STREAM
    (81) expression -> . lambda_function
    (16) return_statement -> . RETURN expression
    (68) control_flow -> . conditional
    (69) control_flow -> . loop
    (70) control_flow -> . break
    (71) control_flow -> . continue
    (88) assignment -> . IDENTIFIER ASSIGN expression
    (14) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN block_statement
    (15) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN typehint block_statement
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA expression
    (82) conditional -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (83) conditional -> . IF LPAREN expression RPAREN block_statement
    (84) loop -> . FOR LPAREN declaration SEMICOLON expression SEMICOLON expression RPAREN block_statement
    (85) loop -> . WHILE LPAREN expression RPAREN block_statement
    (86) break -> . BREAK SEMICOLON
    (87) continue -> . CONTINUE SEMICOLON

    VAR             shift and go to state 9
    CONST           shift and go to state 10
    MINUS           shift and go to state 13
    PLUS            shift and go to state 12
    NOT             shift and go to state 14
    LPAREN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    IDENTIFIER      shift and go to state 21
    RETURN          shift and go to state 24
    FN              shift and go to state 29
    IF              shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    expression                     shift and go to state 5
    return_statement               shift and go to state 6
    control_flow                   shift and go to state 7
    assignment                     shift and go to state 8
    function_definition            shift and go to state 11
    function_call                  shift and go to state 22
    lambda_function                shift and go to state 23
    conditional                    shift and go to state 25
    loop                           shift and go to state 26
    break                          shift and go to state 27
    continue                       shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (8) statement_list -> statement_list . statement
    (2) statement -> . declaration
    (3) statement -> . expression SEMICOLON
    (4) statement -> . return_statement SEMICOLON
    (5) statement -> . control_flow
    (6) statement -> . assignment SEMICOLON
    (29) declaration -> . VAR declaration_base SEMICOLON
    (30) declaration -> . CONST declaration_base SEMICOLON
    (31) declaration -> . function_definition
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression NE expression
    (55) expression -> . expression GT expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GE expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . expression CHAIN expression
    (62) expression -> . expression STREAMSPLIT expression
    (63) expression -> . expression STREAMMERGE expression
    (64) expression -> . expression FEEDBACK expression
    (65) expression -> . MINUS expression
    (66) expression -> . PLUS expression
    (67) expression -> . NOT expression
    (72) expression -> . LPAREN expression RPAREN
    (73) expression -> . INT
    (74) expression -> . FLOAT
    (75) expression -> . STRING
    (76) expression -> . TRUE
    (77) expression -> . FALSE
    (78) expression -> . IDENTIFIER
    (79) expression -> . function_call
    (80) expression -> . expression TO_STREAM
    (81) expression -> . lambda_function
    (16) return_statement -> . RETURN expression
    (68) control_flow -> . conditional
    (69) control_flow -> . loop
    (70) control_flow -> . break
    (71) control_flow -> . continue
    (88) assignment -> . IDENTIFIER ASSIGN expression
    (14) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN block_statement
    (15) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN typehint block_statement
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA expression
    (82) conditional -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (83) conditional -> . IF LPAREN expression RPAREN block_statement
    (84) loop -> . FOR LPAREN declaration SEMICOLON expression SEMICOLON expression RPAREN block_statement
    (85) loop -> . WHILE LPAREN expression RPAREN block_statement
    (86) break -> . BREAK SEMICOLON
    (87) continue -> . CONTINUE SEMICOLON

    $end            reduce using rule 1 (program -> statement_list .)
    VAR             shift and go to state 9
    CONST           shift and go to state 10
    MINUS           shift and go to state 13
    PLUS            shift and go to state 12
    NOT             shift and go to state 14
    LPAREN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    IDENTIFIER      shift and go to state 21
    RETURN          shift and go to state 24
    FN              shift and go to state 29
    IF              shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34

    statement                      shift and go to state 35
    declaration                    shift and go to state 4
    expression                     shift and go to state 5
    return_statement               shift and go to state 6
    control_flow                   shift and go to state 7
    assignment                     shift and go to state 8
    function_definition            shift and go to state 11
    function_call                  shift and go to state 22
    lambda_function                shift and go to state 23
    conditional                    shift and go to state 25
    loop                           shift and go to state 26
    break                          shift and go to state 27
    continue                       shift and go to state 28

state 3

    (7) statement_list -> statement .

    VAR             reduce using rule 7 (statement_list -> statement .)
    CONST           reduce using rule 7 (statement_list -> statement .)
    MINUS           reduce using rule 7 (statement_list -> statement .)
    PLUS            reduce using rule 7 (statement_list -> statement .)
    NOT             reduce using rule 7 (statement_list -> statement .)
    LPAREN          reduce using rule 7 (statement_list -> statement .)
    INT             reduce using rule 7 (statement_list -> statement .)
    FLOAT           reduce using rule 7 (statement_list -> statement .)
    STRING          reduce using rule 7 (statement_list -> statement .)
    TRUE            reduce using rule 7 (statement_list -> statement .)
    FALSE           reduce using rule 7 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 7 (statement_list -> statement .)
    RETURN          reduce using rule 7 (statement_list -> statement .)
    FN              reduce using rule 7 (statement_list -> statement .)
    IF              reduce using rule 7 (statement_list -> statement .)
    FOR             reduce using rule 7 (statement_list -> statement .)
    WHILE           reduce using rule 7 (statement_list -> statement .)
    BREAK           reduce using rule 7 (statement_list -> statement .)
    CONTINUE        reduce using rule 7 (statement_list -> statement .)
    $end            reduce using rule 7 (statement_list -> statement .)
    RBRACE          reduce using rule 7 (statement_list -> statement .)


state 4

    (2) statement -> declaration .

    VAR             reduce using rule 2 (statement -> declaration .)
    CONST           reduce using rule 2 (statement -> declaration .)
    MINUS           reduce using rule 2 (statement -> declaration .)
    PLUS            reduce using rule 2 (statement -> declaration .)
    NOT             reduce using rule 2 (statement -> declaration .)
    LPAREN          reduce using rule 2 (statement -> declaration .)
    INT             reduce using rule 2 (statement -> declaration .)
    FLOAT           reduce using rule 2 (statement -> declaration .)
    STRING          reduce using rule 2 (statement -> declaration .)
    TRUE            reduce using rule 2 (statement -> declaration .)
    FALSE           reduce using rule 2 (statement -> declaration .)
    IDENTIFIER      reduce using rule 2 (statement -> declaration .)
    RETURN          reduce using rule 2 (statement -> declaration .)
    FN              reduce using rule 2 (statement -> declaration .)
    IF              reduce using rule 2 (statement -> declaration .)
    FOR             reduce using rule 2 (statement -> declaration .)
    WHILE           reduce using rule 2 (statement -> declaration .)
    BREAK           reduce using rule 2 (statement -> declaration .)
    CONTINUE        reduce using rule 2 (statement -> declaration .)
    $end            reduce using rule 2 (statement -> declaration .)
    RBRACE          reduce using rule 2 (statement -> declaration .)


state 5

    (3) statement -> expression . SEMICOLON
    (48) expression -> expression . PLUS expression
    (49) expression -> expression . MINUS expression
    (50) expression -> expression . MULTIPLY expression
    (51) expression -> expression . DIVIDE expression
    (52) expression -> expression . EQUALS expression
    (53) expression -> expression . MODULUS expression
    (54) expression -> expression . NE expression
    (55) expression -> expression . GT expression
    (56) expression -> expression . LT expression
    (57) expression -> expression . GE expression
    (58) expression -> expression . LE expression
    (59) expression -> expression . AND expression
    (60) expression -> expression . OR expression
    (61) expression -> expression . CHAIN expression
    (62) expression -> expression . STREAMSPLIT expression
    (63) expression -> expression . STREAMMERGE expression
    (64) expression -> expression . FEEDBACK expression
    (80) expression -> expression . TO_STREAM

    SEMICOLON       shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MULTIPLY        shift and go to state 39
    DIVIDE          shift and go to state 40
    EQUALS          shift and go to state 41
    MODULUS         shift and go to state 42
    NE              shift and go to state 43
    GT              shift and go to state 44
    LT              shift and go to state 45
    GE              shift and go to state 46
    LE              shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49
    CHAIN           shift and go to state 50
    STREAMSPLIT     shift and go to state 51
    STREAMMERGE     shift and go to state 52
    FEEDBACK        shift and go to state 53
    TO_STREAM       shift and go to state 54


state 6

    (4) statement -> return_statement . SEMICOLON

    SEMICOLON       shift and go to state 55


state 7

    (5) statement -> control_flow .

    VAR             reduce using rule 5 (statement -> control_flow .)
    CONST           reduce using rule 5 (statement -> control_flow .)
    MINUS           reduce using rule 5 (statement -> control_flow .)
    PLUS            reduce using rule 5 (statement -> control_flow .)
    NOT             reduce using rule 5 (statement -> control_flow .)
    LPAREN          reduce using rule 5 (statement -> control_flow .)
    INT             reduce using rule 5 (statement -> control_flow .)
    FLOAT           reduce using rule 5 (statement -> control_flow .)
    STRING          reduce using rule 5 (statement -> control_flow .)
    TRUE            reduce using rule 5 (statement -> control_flow .)
    FALSE           reduce using rule 5 (statement -> control_flow .)
    IDENTIFIER      reduce using rule 5 (statement -> control_flow .)
    RETURN          reduce using rule 5 (statement -> control_flow .)
    FN              reduce using rule 5 (statement -> control_flow .)
    IF              reduce using rule 5 (statement -> control_flow .)
    FOR             reduce using rule 5 (statement -> control_flow .)
    WHILE           reduce using rule 5 (statement -> control_flow .)
    BREAK           reduce using rule 5 (statement -> control_flow .)
    CONTINUE        reduce using rule 5 (statement -> control_flow .)
    $end            reduce using rule 5 (statement -> control_flow .)
    RBRACE          reduce using rule 5 (statement -> control_flow .)


state 8

    (6) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 56


state 9

    (29) declaration -> VAR . declaration_base SEMICOLON
    (32) declaration_base -> . IDENTIFIER
    (33) declaration_base -> . IDENTIFIER ASSIGN expression
    (34) declaration_base -> . IDENTIFIER typehint
    (35) declaration_base -> . IDENTIFIER typehint ASSIGN expression

    IDENTIFIER      shift and go to state 58

    declaration_base               shift and go to state 57

state 10

    (30) declaration -> CONST . declaration_base SEMICOLON
    (32) declaration_base -> . IDENTIFIER
    (33) declaration_base -> . IDENTIFIER ASSIGN expression
    (34) declaration_base -> . IDENTIFIER typehint
    (35) declaration_base -> . IDENTIFIER typehint ASSIGN expression

    IDENTIFIER      shift and go to state 58

    declaration_base               shift and go to state 59

state 11

    (31) declaration -> function_definition .

    VAR             reduce using rule 31 (declaration -> function_definition .)
    CONST           reduce using rule 31 (declaration -> function_definition .)
    MINUS           reduce using rule 31 (declaration -> function_definition .)
    PLUS            reduce using rule 31 (declaration -> function_definition .)
    NOT             reduce using rule 31 (declaration -> function_definition .)
    LPAREN          reduce using rule 31 (declaration -> function_definition .)
    INT             reduce using rule 31 (declaration -> function_definition .)
    FLOAT           reduce using rule 31 (declaration -> function_definition .)
    STRING          reduce using rule 31 (declaration -> function_definition .)
    TRUE            reduce using rule 31 (declaration -> function_definition .)
    FALSE           reduce using rule 31 (declaration -> function_definition .)
    IDENTIFIER      reduce using rule 31 (declaration -> function_definition .)
    RETURN          reduce using rule 31 (declaration -> function_definition .)
    FN              reduce using rule 31 (declaration -> function_definition .)
    IF              reduce using rule 31 (declaration -> function_definition .)
    FOR             reduce using rule 31 (declaration -> function_definition .)
    WHILE           reduce using rule 31 (declaration -> function_definition .)
    BREAK           reduce using rule 31 (declaration -> function_definition .)
    CONTINUE        reduce using rule 31 (declaration -> function_definition .)
    $end            reduce using rule 31 (declaration -> function_definition .)
    SEMICOLON       reduce using rule 31 (declaration -> function_definition .)
    RBRACE          reduce using rule 31 (declaration -> function_definition .)


state 12

    (66) expression -> PLUS . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression NE expression
    (55) expression -> . expression GT expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GE expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . expression CHAIN expression
    (62) expression -> . expression STREAMSPLIT expression
    (63) expression -> . expression STREAMMERGE expression
    (64) expression -> . expression FEEDBACK expression
    (65) expression -> . MINUS expression
    (66) expression -> . PLUS expression
    (67) expression -> . NOT expression
    (72) expression -> . LPAREN expression RPAREN
    (73) expression -> . INT
    (74) expression -> . FLOAT
    (75) expression -> . STRING
    (76) expression -> . TRUE
    (77) expression -> . FALSE
    (78) expression -> . IDENTIFIER
    (79) expression -> . function_call
    (80) expression -> . expression TO_STREAM
    (81) expression -> . lambda_function
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA expression

    MINUS           shift and go to state 13
    PLUS            shift and go to state 12
    NOT             shift and go to state 14
    LPAREN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    IDENTIFIER      shift and go to state 61
    FN              shift and go to state 62

    expression                     shift and go to state 60
    function_call                  shift and go to state 22
    lambda_function                shift and go to state 23

state 13

    (65) expression -> MINUS . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression NE expression
    (55) expression -> . expression GT expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GE expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . expression CHAIN expression
    (62) expression -> . expression STREAMSPLIT expression
    (63) expression -> . expression STREAMMERGE expression
    (64) expression -> . expression FEEDBACK expression
    (65) expression -> . MINUS expression
    (66) expression -> . PLUS expression
    (67) expression -> . NOT expression
    (72) expression -> . LPAREN expression RPAREN
    (73) expression -> . INT
    (74) expression -> . FLOAT
    (75) expression -> . STRING
    (76) expression -> . TRUE
    (77) expression -> . FALSE
    (78) expression -> . IDENTIFIER
    (79) expression -> . function_call
    (80) expression -> . expression TO_STREAM
    (81) expression -> . lambda_function
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA expression

    MINUS           shift and go to state 13
    PLUS            shift and go to state 12
    NOT             shift and go to state 14
    LPAREN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    IDENTIFIER      shift and go to state 61
    FN              shift and go to state 62

    expression                     shift and go to state 63
    function_call                  shift and go to state 22
    lambda_function                shift and go to state 23

state 14

    (67) expression -> NOT . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression NE expression
    (55) expression -> . expression GT expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GE expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . expression CHAIN expression
    (62) expression -> . expression STREAMSPLIT expression
    (63) expression -> . expression STREAMMERGE expression
    (64) expression -> . expression FEEDBACK expression
    (65) expression -> . MINUS expression
    (66) expression -> . PLUS expression
    (67) expression -> . NOT expression
    (72) expression -> . LPAREN expression RPAREN
    (73) expression -> . INT
    (74) expression -> . FLOAT
    (75) expression -> . STRING
    (76) expression -> . TRUE
    (77) expression -> . FALSE
    (78) expression -> . IDENTIFIER
    (79) expression -> . function_call
    (80) expression -> . expression TO_STREAM
    (81) expression -> . lambda_function
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA expression

    MINUS           shift and go to state 13
    PLUS            shift and go to state 12
    NOT             shift and go to state 14
    LPAREN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    IDENTIFIER      shift and go to state 61
    FN              shift and go to state 62

    expression                     shift and go to state 64
    function_call                  shift and go to state 22
    lambda_function                shift and go to state 23

state 15

    (72) expression -> LPAREN . expression RPAREN
    (20) lambda_function -> LPAREN . opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> LPAREN . opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> LPAREN . opt_param_list RPAREN LAMBDA expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULTIPLY expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression NE expression
    (55) expression -> . expression GT expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GE expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . expression CHAIN expression
    (62) expression -> . expression STREAMSPLIT expression
    (63) expression -> . expression STREAMMERGE expression
    (64) expression -> . expression FEEDBACK expression
    (65) expression -> . MINUS expression
    (66) expression -> . PLUS expression
    (67) expression -> . NOT expression
    (72) expression -> . LPAREN expression RPAREN
    (73) expression -> . INT
    (74) expression -> . FLOAT
    (75) expression -> . STRING
    (76) expression -> . TRUE
    (77) expression -> . FALSE
    (78) expression -> . IDENTIFIER
    (79) expression -> . function_call
    (80) expression -> . expression TO_STREAM
    (81) expression -> . lambda_function
    (23) opt_param_list -> . param_list
    (24) opt_param_list -> . empty
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA expression
    (25) param_list -> . param
    (26) param_list -> . param_list COMMA param
    (89) empty -> .
    (27) param -> . IDENTIFIER
    (28) param -> . IDENTIFIER typehint

    MINUS           shift and go to state 13
    PLUS            shift and go to state 12
    NOT             shift and go to state 14
    LPAREN          shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    TRUE            shift and go to state 19
    FALSE           shift and go to state 20
    IDENTIFIER      shift and go to state 67
    FN              shift and go to state 62
    RPAREN          reduce using rule 89 (empty -> .)
